// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bdvumH sc-gsDKeI chOlGn dNJqeK"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bdvumH sc-gsDKeI gMOzyQ dNJqeK"
>
  foo
</button>
`;
